--- a/tests/MGroup.DrugDeliveryModel.Tests/MGroup.DrugDeliveryModel.Tests.csproj
+++ b/tests/MGroup.DrugDeliveryModel.Tests/MGroup.DrugDeliveryModel.Tests.csproj
@@ -11,9 +11,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="MGroup.FEM.ConvectionDiffusion" Version="0.2.0-unstable.129" />
-    <PackageReference Include="MGroup.FEM.Structural" Version="0.2.0-unstable.129" />
-    <PackageReference Include="MGroup.NumericalAnalyzers.Discretization" Version="0.2.0-unstable.60" />
     <PackageReference Include="MGroup.Solvers" Version="0.2.0-unstable.21" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.13.0" />
@@ -34,5 +31,10 @@
   <ItemGroup>
     <Folder Include="StaggeredSolutionPresDynamex8\results1\" />
     <Folder Include="StaggeredSolutionPresDynamex7\results1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\FEM\src\MGroup.FEM.ConvectionDiffusion\MGroup.FEM.ConvectionDiffusion.csproj" />
+    <ProjectReference Include="..\..\..\FEM\src\MGroup.FEM.Structural\MGroup.FEM.Structural.csproj" />
+    <ProjectReference Include="..\..\..\NumericalAnalyzers\src\MGroup.NumericalAnalyzers.Discretization\MGroup.NumericalAnalyzers.Discretization.csproj" />
   </ItemGroup>
 </Project>
